# sottools

./: .coverage  .gitignore  LICENSE  README.md  fix_notebooks.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: conf.py  index.md  installation.md
docs/api/: backward.md  forward.md  index.md  mesh.md
docs/tutorials/: Tutorial_1DBackward.ipynb  Tutorial_1DForward.ipynb  Tutorial_2DForward.ipynb
src/sottools/: __init__.py  backward.py  forward.py  mesh.py
src/sottools/utils/: forwardplotting.py  meshplotting.py  meshutils.py
tests/: conftest.py  helpers.py
tests/physics/: test_biotsavart.py  test_london.py
tests/unit/: test_backward.py  test_forwardmodels.py  test_mesh_integrity.py  test_mesh_masks.py  test_mesh_operators.py  test_pickle.py
